--- a/Planets/planets.html
+++ b/Planets/planets.html
@@ -1,146 +1,176 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Planets</title>
-    <link rel="stylesheet" href="planets.css">
-</head>
-<body>
-    <h1>Planets data</h1>
-    <table>
-        <caption>Data about the planets of our solar system (Planetary facts taken from <span class="link"><u>Nasa's Planetary Fact Sheet - Metric</u></span>). </caption>
+    <link rel="stylesheet" href="./css/planets.css" />
+  </head>
+  <body>
+    <div class="wrapper">
+      <h1>Planets data</h1>
+      <table>
+        <caption>
+          Data about the planets of our solar system &#40;Planetary facts taken
+          from
+          <span class="link"><u>Nasa's Planetary Fact Sheet - Metric</u></span
+          >&#41;.
+        </caption>
         <tr>
-            <td colspan="2"> </td>
-            <th class="bord" id="name"> Name </th>
-            <th> Mass <br> (10 <sup>24</sup> kg) </th>
-            <th> Diameter <br> (km) </th>
-            <th> Density <br> (kg/m <sup>3</sup> ) </th>
-            <th> Gravity <br> (m/s <sup>2</sup> ) </th>
-            <th> Length of days <br> (hours) </th>
-            <th> Distance from Sun <br> (10 <sup>6</sup> km ) </th>
-            <th> Mean temperature <br> ( &deg; C) </th>
-            <th> Number of moons </th>
-            <th> Notes </th>
+          <td colspan="2"></td>
+          <th class="bord" id="name">Name</th>
+          <th>
+            Mass <br />
+            &#40;10 <sup>24</sup> kg&#41;
+          </th>
+          <th>
+            Diameter <br />
+            &#40;km&#41;
+          </th>
+          <th>
+            Density <br />
+            &#40;kg/m <sup>3</sup> &#41;
+          </th>
+          <th>
+            Gravity <br />
+            &#40;m/s <sup>2</sup> &#41;
+          </th>
+          <th>
+            Length of days <br />
+            &#40;hours&#41;
+          </th>
+          <th>
+            Distance from Sun <br />
+            &#40;10 <sup>6</sup> km &#41;
+          </th>
+          <th>
+            Mean temperature <br />
+            &#40; &deg; C&#41;
+          </th>
+          <th>Number of moons</th>
+          <th>Notes</th>
         </tr>
         <tr>
-            <th colspan="2" rowspan="4"> Terrestrial planets </th>
-            <th class="bord"> Mercury </th>
-            <td> 0.330 </td>
-            <td> 4,879 </td>
-            <td> 5427 </td>
-            <td> 3.7 </td>
-            <td> 4222.6 </td>
-            <td> 57.9 </td>
-            <td> 167 </td>
-            <td> 0 </td>
-            <td> Closest to the Sun</td>
+          <th colspan="2" rowspan="4">Terrestrial planets</th>
+          <th class="bord">Mercury</th>
+          <td>0.330</td>
+          <td>4,879</td>
+          <td>5427</td>
+          <td>3.7</td>
+          <td>4222.6</td>
+          <td>57.9</td>
+          <td>167</td>
+          <td>0</td>
+          <td>Closest to the Sun</td>
         </tr>
         <tr>
-            <th class="bord"> Venus </th>
-            <td> 4.87 </td>
-            <td> 12,104 </td>
-            <td> 5243 </td>
-            <td> 8.9 </td>
-            <td> 2802.0 </td>
-            <td> 108.2 </td>
-            <td> 464 </td>
-            <td> 0 </td>
-            <td>  </td>
+          <th class="bord">Venus</th>
+          <td>4.87</td>
+          <td>12,104</td>
+          <td>5243</td>
+          <td>8.9</td>
+          <td>2802.0</td>
+          <td>108.2</td>
+          <td>464</td>
+          <td>0</td>
+          <td></td>
         </tr>
         <tr>
-            <th class="bord"> Earth </th>
-            <td> 5.97 </td>
-            <td> 12,756 </td>
-            <td> 5514 </td>
-            <td> 9.8 </td>
-            <td> 24.0 </td>
-            <td> 149.6 </td>
-            <td> 15 </td>
-            <td> 1 </td>
-            <td> Our world </td>
+          <th class="bord">Earth</th>
+          <td>5.97</td>
+          <td>12,756</td>
+          <td>5514</td>
+          <td>9.8</td>
+          <td>24.0</td>
+          <td>149.6</td>
+          <td>15</td>
+          <td>1</td>
+          <td>Our world</td>
         </tr>
         <tr>
-            <th class="bord"> Mars </th>
-            <td> 0.642 </td>
-            <td> 6,792 </td>
-            <td> 3933 </td>
-            <td> 3.7 </td>
-            <td> 24.7 </td>
-            <td> 227.9 </td>
-            <td> -65 </td>
-            <td> 2 </td>
-            <td> The red planet </td>
+          <th class="bord">Mars</th>
+          <td>0.642</td>
+          <td>6,792</td>
+          <td>3933</td>
+          <td>3.7</td>
+          <td>24.7</td>
+          <td>227.9</td>
+          <td>-65</td>
+          <td>2</td>
+          <td>The red planet</td>
         </tr>
         <tr>
-            <th rowspan="4"> Jovian planets </th>
-            <th rowspan="2"> Gas giants </th>
-            <th class="bord"> Jupiter </th>
-            <td> 1898 </td>
-            <td> 142,984 </td>
-            <td> 1326 </td>
-            <td> 23.1 </td>
-            <td> 9.9 </td>
-            <td> 778.6 </td>
-            <td> -110 </td>
-            <td> 67 </td>
-            <td> The largest planet </td>
+          <th rowspan="4">Jovian planets</th>
+          <th rowspan="2">Gas giants</th>
+          <th class="bord">Jupiter</th>
+          <td>1898</td>
+          <td>142,984</td>
+          <td>1326</td>
+          <td>23.1</td>
+          <td>9.9</td>
+          <td>778.6</td>
+          <td>-110</td>
+          <td>67</td>
+          <td>The largest planet</td>
         </tr>
         <tr>
-            <th class="bord"> Saturn </th>
-            <td> 568 </td>
-            <td> 120,536 </td>
-            <td> 687 </td>
-            <td> 9.0 </td>
-            <td> 10.7 </td>
-            <td> 1433.5 </td>
-            <td> -140 </td>
-            <td> 62 </td>
-            <td>  </td>
+          <th class="bord">Saturn</th>
+          <td>568</td>
+          <td>120,536</td>
+          <td>687</td>
+          <td>9.0</td>
+          <td>10.7</td>
+          <td>1433.5</td>
+          <td>-140</td>
+          <td>62</td>
+          <td></td>
         </tr>
         <tr>
-            <th rowspan="2"> Ice giants </th>
-            <th class="bord"> Uranus </th>
-            <td> 86.8 </td>
-            <td> 51,116 </td>
-            <td> 1271</td>
-            <td> 8.7 </td>
-            <td> 17.2 </td>
-            <td> 2872.5 </td>
-            <td> -195 </td>
-            <td> 27 </td>
-            <td> </td>
+          <th rowspan="2">Ice giants</th>
+          <th class="bord">Uranus</th>
+          <td>86.8</td>
+          <td>51,116</td>
+          <td>1271</td>
+          <td>8.7</td>
+          <td>17.2</td>
+          <td>2872.5</td>
+          <td>-195</td>
+          <td>27</td>
+          <td></td>
         </tr>
         <tr>
-            <th class="bord"> Neptune </th>
-            <td> 102 </td>
-            <td> 49,528 </td>
-            <td> 1638 </td>
-            <td> 11.0 </td>
-            <td> 16.1 </td>
-            <td> 4495.1 </td>
-            <td> -200 </td>
-            <td> 14 </td>
-            <td> </td>
+          <th class="bord">Neptune</th>
+          <td>102</td>
+          <td>49,528</td>
+          <td>1638</td>
+          <td>11.0</td>
+          <td>16.1</td>
+          <td>4495.1</td>
+          <td>-200</td>
+          <td>14</td>
+          <td></td>
         </tr>
         <tr>
-            <th colspan="2"> Terrestrial planets </th>
-            <th class="bord" id="pluto"> Pluto </th>
-            <td> 0.0146 </td>
-            <td> 2,370 </td>
-            <td> 2095 </td>
-            <td> 0.7 </td>
-            <td> 153.3 </td>
-            <td> 5906.4 </td>
-            <td> -225 </td>
-            <td> 5 </td>
-            <td>
-                <p>
-                    Declassified as a planet in 2006, but this <span class="link"><u>remains controversial</u></span>.
-                </p>
-            </td>
+          <th colspan="2">Terrestrial planets</th>
+          <th class="bord" id="pluto">Pluto</th>
+          <td>0.0146</td>
+          <td>2,370</td>
+          <td>2095</td>
+          <td>0.7</td>
+          <td>153.3</td>
+          <td>5906.4</td>
+          <td>-225</td>
+          <td>5</td>
+          <td>
+            <p>
+              Declassified as a planet in 2006, but this
+              <span class="link"><u>remains controversial</u></span
+              >.
+            </p>
+          </td>
         </tr>
-    </table>
-</body>
+      </table>
+    </div>
+  </body>
 </html>
