--- a/Sold Items/simple.html
+++ b/Sold Items/simple.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Items Sold</title>
-    <link rel="stylesheet" href="simple.css" />
+    <link rel="stylesheet" href="./css/simple.css" />
   </head>
   <body>
     <div class="outer">
